assets/css/style.css
:root {
    --brand-color: red;
    --showcase-color-high: red;
    --showcase-color-low: red;

    --primary-foreground-color: #000000;
    --secondary-foreground-color: gray;
    --primary-background-color: #ffffff;
    --secondary-background-color: #f0f0f0;
    --navigation-background: rgba(255, 255, 255, 0.7);
    --primary-action-background-color: #007aff;

    --primary-highlight-color: lightyellow;
    --secondary-highlight-color: palegoldenrod;

    --symbol-filter: 0;

    --content-width: 900px;
    --vertical-spacing: 1rem;

    --line-weight: 0.5px;

}

@media (prefers-color-scheme: dark) {

    :root {
        --brand-color: red;
        --showcase-color-high: red;
        --showcase-color-low: red;

        --primary-foreground-color: #ffffff;
        --secondary-foreground-color: gray;
        --primary-background-color: #171616;
        --secondary-background-color: #222222;
        --navigation-background: rgba(24, 24, 24, 0.7);
        --primary-action-background-color: #0a84ff;

        --primary-highlight-color: #22221a;
        --secondary-highlight-color: #3c3a1f;

        --symbol-filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(39deg) brightness(103%) contrast(102%);
    }

}

body {
    font-family: Helvetica, sans-serif;
    font-weight: 200;
    font-size: 17px;
    margin: 0;
    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
    background-color: var(--primary-background-color);
    color: var(--primary-foreground-color);
}

a {
    text-decoration: underline;
    color: var(--primary-foreground-color);
}

a:hover {
    color: var(--brand-color);
}

h1, h2, h3 {
    margin: var(--vertical-spacing) 0 calc(2 * var(--vertical-spacing)) 0;
}

header h1 {
    text-align: center;
    font-size: 2.2em;
}

@media (min-width:768px) {

    header h1 {
        font-size: 3em;
    }

}

p {
    margin: var(--vertical-spacing) 0 var(--vertical-spacing) 0;
    line-height: 1.5em;
}

p.center {
    text-align: center;
}

hr {
    border: 0;
    border-bottom: var(--line-weight) solid var(--secondary-foreground-color);
}

pre, code {
    background-color: var(--secondary-background-color);
}

code {
    font-size: 0.8em;
    padding: 0.1em 0.2em;
    border-radius: 0.2em;
}

pre:has(> code.language-mermaid), code.language-mermaid {
    background-color: var(--primary-background-color);
}

ul {
    margin-bottom: calc(2 * var(--vertical-spacing));
}

li {
    line-height: 1.5em;
}

li > ul {
    margin-bottom: 0;
}

ul.navigation {
    list-style: none;
    margin: 0;
    padding: 1em;
    background-color: white;
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 1000;
    box-sizing: border-box;
    font-weight: 400;
    text-align: center;
    background: var(--navigation-background);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
}

ul.navigation a {
    text-decoration: none;
}

ul.navigation > li {
    display: inline-block;
    padding: 0.4em;
}

#toc:has(> li) {
    padding-bottom: calc(2 * var(--vertical-spacing));
    border-bottom: var(--line-weight) solid var(--secondary-foreground-color);
}

.header {
    text-align: center;
}

.appname {
    font-weight: 800;
    text-align: center;
    font-size: 3em;
    margin-bottom: var(--vertical-spacing);
}

.tagline {
    text-align: center;
    font-size: 1.2em;
    margin-bottom: var(--vertical-spacing);
}

.actions {
    text-align: center;
}

.button, .button:hover {
    color: white;
    background-color: var(--primary-action-background-color);
    border-radius: 100vh;
    padding: 1rem 1.6rem;
    text-decoration: none;
    display: inline-block;
}

.content {
    max-width: var(--content-width);
    margin: auto;
    padding: 0 calc(2 * var(--vertical-spacing));
}

.content img {
    max-width: 100%;
    height: auto;
}

.content-sidebar {
    max-width: var(--content-width);
    margin: auto;
    padding: 0 calc(2 * var(--vertical-spacing));
    display: grid;
    grid-template-areas: 'left-sidebar' 'main-content';
}

.content-sidebar h1 {
    text-align: left;
    border-bottom: var(--line-weight) solid var(--secondary-foreground-color);
    padding-bottom: 0.5rem;
}

@media (min-width:768px) {

    .content-sidebar {
        grid-template-columns: 200px auto;
        grid-template-areas:
            'left-sidebar main-content';
        grid-gap: 1rem;
    }

}

left-sidebar {
    grid-area: 'left-sidebar';
    border-bottom: var(--line-weight) solid var(--secondary-foreground-color);
}

@media (min-width:768px) {

    left-sidebar {
        border-right: var(--line-weight) solid var(--secondary-foreground-color);
        margin-right: 1rem;
        border-bottom: 0;
    }

}

left-sidebar ul {
    list-style: none;
}

left-sidebar > ul {
    padding-left: 0;
}

main-content {
    grid-area: 'main-content';
    overflow-x: wrap;
}

aside {
    background-color: var(--primary-highlight-color);
    padding: calc(var(--vertical-spacing)) calc(var(--vertical-spacing) * 2);
    clear: both;
}

ul.features {
    list-style: none;
    padding: 0;
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: calc(2 * var(--vertical-spacing));
    row-gap: var(--vertical-spacing);
}

@media (max-width: 768px) {
    ul.features {
        grid-template-columns: 1fr;
    }
}

ul.features li {
    text-align: center;
}

footer {
    max-width: var(--content-width);
    margin: auto;
    padding: 2em;
    text-align: center;
    color: var(--secondary-foreground-color);
    font-size: 0.9rem;
}

footer a {
    color: var(--secondary-foreground-color);
}

footer p {
    margin: var(--vertical-spacing) 0 calc(var(--vertical-spacing) / 2) 0;
}

footer nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

footer nav ul li {
    display: inline;
    margin-right: 0.4em;
}

.symbol {
    width: 2em;
    filter: var(--symbol-filter);
    transition: filter 0.3s ease-in-out;
}

.showcase {
    background-image: radial-gradient(var(--showcase-color-high), var(--showcase-color-low));
    transition: background-image 0.3s ease-in-out;
    margin: calc(2 * var(--vertical-spacing)) 0;
    font-weight: 400;
    text-align: center;
}

.showcase img {
    display: block;
}

